# mfsdl

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  justfile
.claude/: rules.md
.github/workflows/: build.yml  release.yml
src/: client.rs  downloader.rs  main.rs
