[package]
name = "mfsdl"
version = "0.1.3"
edition = "2024"
license = "WTFPL"
authors = ["ekuinox <depkey@me.com>"]
repository = "https://github.com/ekuinox/mfsdl"
readme = "README.md"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.86"
camino = "1.2.2"
clap = { version = "4.5.4", features = ["derive", "env"] }
const_format = "0.2.32"
futures = "0.3.30"
indicatif = "0.18.3"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
structstruck = "0.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
vergen-gitcl = "1.0.8"
